tests/errors/wrong_type_usage/wrong_function_arg_count.meth
int func(int x, str y, int z) {
    print(y);
    return x + 4 + z;
}



func(4, 4);